--- a/project_frontend/src/App.css
+++ b/project_frontend/src/App.css
@@ -36,3 +36,8 @@
     transform: rotate(360deg);
   }
 }
+
+input:not(:placeholder-shown):invalid{
+  background-color:pink;
+  box-shadow:0 0 0 2px red;
+  }
