--- a/project_frontend/src/App.css
+++ b/project_frontend/src/App.css
@@ -1,40 +1,31 @@
-.App {
-  text-align: center;
+@import url('http://fonts.googleapis.com/css?family=Lato&display=swap');
+@import url('http://fonts.googleapis.com/css?family=Lato&display=swap');
+
+* {
+    box-sizing: 0;
+    margin: 0;
+    padding: 0;
+    font-family :'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.dashBoard,
+.admin,
+.inventory,
+.payment,
+.discount,
+.delivery,
+.advertisement,
+.request,
+.feedback {
   display: flex;
-  flex-direction: column;
+  height: 90vh;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 3rem;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body{
+  background-color: #e6f2ff;
 }
 
 input:not(:placeholder-shown):invalid{
