--- a/project_frontend/public/Asserts/css/styles.css
+++ b/project_frontend/public/Asserts/css/styles.css
@@ -57,7 +57,7 @@ body * {
     opacity: 0
 }
 
-li {
+.li {
     padding-left: 10px;
     font-size: 18px;
     display: inline;
@@ -295,11 +295,11 @@ a.btn-signin:hover {
 .main-body {
     padding: 15px;
 }
-.card {
+.cardd {
     box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
 }
 
-.card {
+.cardd {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -316,7 +316,7 @@ a.btn-signin:hover {
 }
 
 
-.card-body {
+.card-bodyd {
     flex: 1 1 auto;
     min-height: 1px;
     padding: 1rem;
